--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "day2": "node --loader ts-node/esm src/day2/day2.ts",
     "day2-2": "node --loader ts-node/esm src/day2/day2-2.ts",
     "day3": "node --loader ts-node/esm src/day3/day3.ts",
-    "day3-2": "node --loader ts-node/esm src/day3/day3-2.ts"
+    "day3-2": "node --loader ts-node/esm src/day3/day3-2.ts",
+    "day3-2-1": "node --loader ts-node/esm src/day3/day3-2-1.ts"
   },
   "keywords": [],
   "author": "",
