--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "day3": "node --loader ts-node/esm src/day3/day3.ts",
     "day3-2": "node --loader ts-node/esm src/day3/day3-2.ts",
     "day3-2-1": "node --loader ts-node/esm src/day3/day3-2-1.ts",
-    "day4-1": "node --loader ts-node/esm src/day4/day4-1.ts"
+    "day4-1": "node --loader ts-node/esm src/day4/day4-1.ts",
+    "day4-2": "node --loader ts-node/esm src/day4/day4-2.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "ts-arithmetic": "^0.1.1",
     "ts-node": "^10.9.1",
+    "ts-toolbelt": "^9.6.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.2"
   }
