--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "day3-2-1": "node --loader ts-node/esm src/day3/day3-2-1.ts",
     "day4-1": "node --loader ts-node/esm src/day4/day4-1.ts",
     "day4-2": "node --loader ts-node/esm src/day4/day4-2.ts",
+    "day5": "node --loader ts-node/esm src/day5/day5.ts",
+    "day5-2": "node --loader ts-node/esm src/day5/day5-anoth.ts",
     "day6-1": "node --loader ts-node/esm src/day6/day6-1.ts",
     "day6-2": "node --loader ts-node/esm src/day6/day6-2.ts",
     "day7": "node --loader ts-node/esm src/day7/day7.ts",
