--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "day7-1": "node --loader ts-node/esm src/day7/day7-1.ts",
     "day7-2": "node --loader ts-node/esm src/day7/day7-2.ts",
     "day8": "node --loader ts-node/esm src/day8/day8.ts",
-    "day8-2": "node --loader ts-node/esm src/day8/day8-2.ts"
+    "day8-2": "node --loader ts-node/esm src/day8/day8-2.ts",
+    "day9": "node --loader ts-node/esm src/day9/day9.ts"
   },
   "keywords": [],
   "author": "",
