--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "day8": "node --loader ts-node/esm src/day8/day8.ts",
     "day8-2": "node --loader ts-node/esm src/day8/day8-2.ts",
     "day9": "node --loader ts-node/esm src/day9/day9.ts",
-    "day10": "node --loader ts-node/esm src/day10/day10.ts"
+    "day10": "node --loader ts-node/esm src/day10/day10.ts",
+    "day11": "node --loader ts-node/esm src/day11/day11.ts",
+    "day12": "node --loader ts-node/esm src/day12/day12.ts"
   },
   "keywords": [],
   "author": "",
