--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "day9": "node --loader ts-node/esm src/day9/day9.ts",
     "day10": "node --loader ts-node/esm src/day10/day10.ts",
     "day11": "node --loader ts-node/esm src/day11/day11.ts",
-    "day12": "node --loader ts-node/esm src/day12/day12.ts"
+    "day12": "node --loader ts-node/esm src/day12/day12.ts",
+    "day13": "node --loader ts-node/esm src/day13/day13.ts"
   },
   "keywords": [],
   "author": "",
