--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "day11": "node --loader ts-node/esm src/day11/day11.ts",
     "day12": "node --loader ts-node/esm src/day12/day12.ts",
     "day13": "node --loader ts-node/esm src/day13/day13.ts",
-    "day13-2": "node --loader ts-node/esm src/day13/day13-2.ts"
+    "day13-2": "node --loader ts-node/esm src/day13/day13-2.ts",
+    "day16": "node --loader ts-node/esm src/day16/day16.ts"
   },
   "keywords": [],
   "author": "",
@@ -40,5 +41,8 @@
     "ts-toolbelt": "^9.6.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.2"
+  },
+  "dependencies": {
+    "@blakeembrey/deque": "^1.0.5"
   }
 }
