--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
+    "tsc": "tsc -w",
     "dev": "ts-node src/index.ts",
     "day1": "node --loader ts-node/esm src/day1/day1.ts",
     "day2": "node --loader ts-node/esm src/day2/day2.ts",
@@ -45,7 +46,7 @@
     "ts-node": "^10.9.1",
     "ts-toolbelt": "^9.6.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@blakeembrey/deque": "^1.0.5"
