--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,5 @@
 {
-  "ts-node": {
-    // Do not forget to `npm i -D tsconfig-paths`
-    // "require": ["tsconfig-paths/register"],
-    "esm": true
-  },
   "compilerOptions": {
-    // "lib": ["ESNext"],
     "module": "NodeNext",
     "target": "es2022",
     "strict": true,
@@ -13,7 +7,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "out",
+    "outDir": "dist",
     "sourceMap": true,
     "moduleResolution": "NodeNext"
   },
