--- a/package.json
+++ b/package.json
@@ -41,11 +41,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.11",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "@types/node": "^20.10.0",
     "ts-arithmetic": "^0.1.1",
     "ts-node": "^10.9.1",
     "ts-toolbelt": "^9.6.0",
     "tsconfig-paths": "^4.2.0",
+    "dotless": "^1.2.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
