dunno windows sucks

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "day16": "node --loader ts-node/esm src/day16/day16.ts",
     "day17": "node --loader ts-node/esm src/day17/day17.ts",
     "day18": "node  src/day18/day18.js",
-    "day19": "node src/day19/day19.js"
+    "day19": "node src/day19/day19.js",
+    "day20": "node dist/day20/day20.js"
   },
   "keywords": [],
   "author": "",
