--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,17 @@
 {
   "compilerOptions": {
-    "module": "NodeNext",
-    "target": "es2022",
+    "module": "Node16",
+    "target": "es2020",
+    "moduleResolution": "Node16",
     "strict": true,
     "noUncheckedIndexedAccess": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "dist",
-    "sourceMap": true,
-    "moduleResolution": "NodeNext"
+    "rootDir": "src",
+    "sourceMap": true
   },
-  "include": ["src/**/*.ts", "src/day10/day10.js"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
